Movie-grid: Created movie grid and pop-up dialog.

--- a/web/themes/custom/custom_theme/scss/base/_elements.scss
+++ b/web/themes/custom/custom_theme/scss/base/_elements.scss
@@ -9,6 +9,7 @@
   --brand-primary: #{$brand-primary};
   --brand-secondary-color: #{$brand-secondary-color};
   --bg-accent-color: #{$bg-accent-color};
+  --bg-light-color: #{$bg-light-color};
 }
 
 html, body {
