--- a/web/themes/custom/custom_theme/scss/components/_slider.scss
+++ b/web/themes/custom/custom_theme/scss/components/_slider.scss
@@ -3,9 +3,10 @@
 .region.region-content {
   padding: 0;
 
-  .view-id-movies.view-display-id-page_1 {
-    .view-content {
+  .movie-slider.view-id-movies.view-display-id-page_1 {
+    .view-content.slick-slider.slick-dotted {
       position: relative;
+      margin-bottom: 0;
 
       .slick-arrow {
         position: absolute;
@@ -19,11 +20,35 @@
         left: 0;
         transform: translate(50%, -50%);
         z-index: 10;
+
+        @include media($mobile-l-screen) {
+          @include font-size(24px);
+        }
+
+        @include media($mobile-m-screen) {
+          @include font-size(21px);
+        }
+
+        @include media($mobile-s-screen) {
+          @include font-size(18px);
+        }
       }
 
       .arrow-right {
         right: 0;
         transform: translate(-50%, -50%);
+
+        @include media($mobile-l-screen) {
+          @include font-size(24px);
+        }
+
+        @include media($mobile-m-screen) {
+          @include font-size(21px);
+        }
+
+        @include media($mobile-s-screen) {
+          @include font-size(18px);
+        }
       }
 
       .slick-list {
@@ -48,9 +73,37 @@
 
               .field-content {
                 a {
-                  font-size: 30px;
+                  @include font-size(18px);
                   letter-spacing: 2px;
                   text-transform: uppercase;
+
+                  @include media($large-screen) {
+                    @include font-size(48px);
+                  }
+
+                  @include media($laptop-l-screen) {
+                    @include font-size(38px);
+                  }
+
+                  @include media($laptop-screen) {
+                    @include font-size(30px);
+                  }
+
+                  @include media($tablet-screen) {
+                    @include font-size(28px);
+                  }
+
+                  @include media($mobile-l-screen) {
+                    @include font-size(22px);
+                  }
+
+                  @include media($mobile-m-screen) {
+                    @include font-size(20px);
+                  }
+
+                  @include media($mobile-s-screen) {
+                    @include font-size(18px);
+                  }
                 }
               }
             }
@@ -59,11 +112,71 @@
               @include absolute-center(40%, 50%, -50%, -50%);
               @include margin-center;
               opacity: 0.8;
+
+              @include media($large-screen) {
+                @include absolute-center(38%, 50%, -50%, -50%);
+                @include font-size(30px);
+              }
+
+              @include media($laptop-l-screen) {
+                @include absolute-center(35%, 50%, -50%, -50%);
+              }
+
+              @include media($laptop-screen) {
+                @include absolute-center(34%, 50%, -50%, -50%);
+              }
+
+              @include media($tablet-screen) {
+                @include absolute-center(35%, 50%, -50%, -50%);
+              }
+
+              @include media($mobile-l-screen) {
+                @include font-size(10px);
+                @include absolute-center(30%, 50%, -50%, -50%);
+              }
+
+              @include media($mobile-m-screen) {
+                @include font-size(8px);
+                @include absolute-center(25%, 50%, -50%, -50%);
+              }
+
+              @include media($mobile-s-screen) {
+                @include font-size(8px);
+                @include absolute-center(25%, 50%, -50%, -50%);
+              }
             }
 
             .views-field-view-node {
               @include absolute-center(65%, 50%, -50%, -50%);
               @include margin-center;
+
+              @include media($large-screen) {
+                @include absolute-center(64%, 50%, -50%, -50%);
+              }
+
+              @include media($laptop-l-screen) {
+                @include absolute-center(72%, 50%, -50%, -50%);
+              }
+
+              @include media($laptop-screen) {
+                @include absolute-center(71%, 50%, -50%, -50%);
+              }
+
+              @include media($tablet-screen) {
+                @include absolute-center(69%, 50%, -50%, -50%);
+              }
+
+              @include media($mobile-l-screen) {
+                @include absolute-center(71%, 50%, -50%, -50%);
+              }
+
+              @include media($mobile-m-screen) {
+                @include absolute-center(75%, 50%, -50%, -50%);
+              }
+
+              @include media($mobile-s-screen) {
+                @include absolute-center(75%, 50%, -50%, -50%);
+              }
 
               .field-content {
                 a {
@@ -72,13 +185,41 @@
                   border: 1px solid var(--brand-secondary-color);
                   text-transform: uppercase;
                   letter-spacing: 2.3px;
-                  font-size: 14px;
+                  @include font-size(14px);
                   font-family: $title-font, sans-serif;
 
                   &:hover {
                     background-color: var(--brand-primary);
                     color: var(--brand-secondary-color);
                     border: none;
+                  }
+
+                  @include media($large-screen) {
+                    @include font-size(18px);
+                  }
+
+                  @include media($tablet-screen) {
+                    letter-spacing: 1.5px;
+                    @include font-size(13px);
+                    @include padding(5px, 10px);
+                  }
+
+                  @include media($mobile-l-screen) {
+                    letter-spacing: 1.5px;
+                    @include font-size(9px);
+                    @include padding(3px, 6px);
+                  }
+
+                  @include media($mobile-m-screen) {
+                    letter-spacing: 1.5px;
+                    @include font-size(8px);
+                    @include padding(3px, 6px);
+                  }
+
+                  @include media($mobile-s-screen) {
+                    letter-spacing: 1.5px;
+                    @include font-size(8px);
+                    @include padding(3px, 6px);
                   }
                 }
               }
@@ -94,11 +235,45 @@
         li {
           button::before {
             content: '';
-            font-size: 10px;
+            @include font-size(10px);
             width: 20px;
             height: 5px;
             background-color: var(--brand-secondary-color);
             opacity: 0.8;
+
+            @include media($mobile-l-screen) {
+              @include font-size(7px);
+              width: 12px;
+              height: 5px;
+            }
+
+            @include media($mobile-m-screen) {
+              @include font-size(7px);
+              width: 10px;
+              height: 3px;
+            }
+
+            @include media($mobile-s-screen) {
+              @include font-size(7px);
+              width: 10px;
+              height: 3px;
+            }
+          }
+
+          @include media($mobile-l-screen) {
+            margin: 0 3px;
+          }
+
+          @include media($mobile-m-screen) {
+            margin: 0 2px;
+            width: 12px;
+            height: 10px;
+          }
+
+          @include media($mobile-s-screen) {
+            margin: 0;
+            width: 12px;
+            height: 5px;
           }
         }
 
