--- a/web/themes/custom/custom_theme/scss/partial_files/_variables.scss
+++ b/web/themes/custom/custom_theme/scss/partial_files/_variables.scss
@@ -1,7 +1,15 @@
 $brand-primary: #e50913;
 $brand-secondary-color: #fff;
 $bg-accent-color: #141414;
+$bg-light-color: #dad6cd;
 $body-font: Montserrat-SemiBold;
 $title-font: Montserrat-Italic;
 $paragraph-font: Montserrat-Light;
 $medium-font: Montserrat-Medium;
+$mobile-s-screen: 320px;
+$mobile-m-screen: 375px;
+$mobile-l-screen: 425px;
+$tablet-screen: 768px;
+$laptop-screen: 1024px;
+$laptop-l-screen: 1440px;
+$large-screen: 2560px;
