--- a/web/themes/custom/custom_theme/scss/components/_slider.scss
+++ b/web/themes/custom/custom_theme/scss/components/_slider.scss
@@ -59,10 +59,11 @@
 
             .views-field-field-movie-image {
               .field-content {
+                picture {
                 img {
                   filter: brightness(0.6);
                   min-width: 100%;
-                }
+                }}
               }
             }
 
@@ -94,7 +95,7 @@
                   }
 
                   @include media($mobile-l-screen) {
-                    @include font-size(22px);
+                    @include font-size(21px);
                   }
 
                   @include media($mobile-m-screen) {
@@ -119,14 +120,17 @@
               }
 
               @include media($laptop-l-screen) {
+                @include font-size(23px);
                 @include absolute-center(35%, 50%, -50%, -50%);
               }
 
               @include media($laptop-screen) {
+                @include font-size(20px);
                 @include absolute-center(34%, 50%, -50%, -50%);
               }
 
               @include media($tablet-screen) {
+                @include font-size(16px);
                 @include absolute-center(35%, 50%, -50%, -50%);
               }
 
